Reworked how collapsed lists work so the tooltip is not cut off (fixes #1928)

--- a/themes/grav/scss/template/_forms.scss
+++ b/themes/grav/scss/template/_forms.scss
@@ -679,12 +679,19 @@ textarea.frontmatter {
 
             &.collection-collapsed {
                 height: 70px;
-                overflow: hidden;
                 @include transform(translateZ(0));
 
                 @include breakpoint(mobile-only) {
                     height: 120px;
                 }
+
+                // Fix for grav-plugin-admin#1928
+
+                // overflow: hidden;
+                > .form-field ~ .form-field {
+                    display: none;
+                }
+                // end fix
             }
         }
 
